Assume latest version of the Atlassian SDK is being used
This is currently 8.0.7. I was previously on 6.2.14.

Make adjustments to the pom to work with the latest SDK.